Correct misplaced parentheses, so that l10n of strings will work. Fixes LP: #640972

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ update-manager (1:0.142.14) UNRELEASEDmaverick; urgency=low
   [ Gabor Kelemen ]
   * Fix invocation of gksu, use the correct .desktop file.
     Fixes LP: #640906
+  * Correct misplaced parentheses, so that l10n of strings will 
+    work. Fixes LP: #640972
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 10 Sep 2010 16:02:29 +0200
 
