--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,13 @@
-update-manager (1:0.142.14) UNRELEASEDmaverick; urgency=low
+update-manager (1:0.142.14) maverick; urgency=low
 
   [ Michael Vogt ]
   * DistUpgrade/mirrors.cfg:
     - add extras.ubuntu.com to known mirrors
   * DistUpgrade/DistUpgradeQuirks.py:
     - add extras.ubuntu.com on upgrade
+  * AutoUpgradeTester/jeos/create-base-image.sh:
+    - add workaround for issue with python-vm-builder that generates
+      random filenames in maverick
   
   [ Gabor Kelemen ]
   * Fix invocation of gksu, use the correct .desktop file.
@@ -12,7 +15,7 @@ update-manager (1:0.142.14) UNRELEASEDmaverick; urgency=low
   * Correct misplaced parentheses, so that l10n of strings will 
     work. Fixes LP: #640972
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 10 Sep 2010 16:02:29 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 21 Sep 2010 17:00:34 +0200
 
 update-manager (1:0.142.13) maverick; urgency=low
 
