--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ update-manager (1:0.142.15) UNRELEASED; urgency=low
 
   * po/*.po:
     - updated from launchpad translations for the RC candidate
+  * DistUpgrade/DevelReleaseAnnouncement:
+    - updated for RC
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 27 Sep 2010 14:19:39 +0200
 
