--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-update-manager (1:0.142.15) UNRELEASED; urgency=low
+update-manager (1:0.142.15) maverick; urgency=low
 
   * po/*.po:
     - updated from launchpad translations for the RC candidate
   * DistUpgrade/DevelReleaseAnnouncement:
     - updated for RC
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 27 Sep 2010 14:19:39 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 27 Sep 2010 14:21:57 +0200
 
 update-manager (1:0.142.14) maverick; urgency=low
 
