* DistUpgrade/ReleaseAnnouncement:   - add link to http://www.ubuntu.com/desktop/features to tell     users about the new features in this release

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+update-manager (1:0.142.16) UNRELEASED; urgency=low
+
+  * DistUpgrade/ReleaseAnnouncement:
+    - add link to http://www.ubuntu.com/desktop/features to tell
+      users about the new features in this release
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 30 Sep 2010 14:03:10 +0200
+
 update-manager (1:0.142.15) maverick; urgency=low
 
   * po/*.po:
