* DistUpgrade/DistUpgrade.cfg:   - help the upgrade by removing printconf, foomatic-db-gutenprint     and ebox-printers as they are not compatible with     foomatic-db-compressed-ppds (LP: #647460)

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,10 @@ update-manager (1:0.142.16) UNRELEASED; urgency=low
   * DistUpgrade/ReleaseAnnouncement:
     - add link to http://www.ubuntu.com/desktop/features to tell
       users about the new features in this release
+  * DistUpgrade/DistUpgrade.cfg:
+    - help the upgrade by removing printconf, foomatic-db-gutenprint 
+      and ebox-printers as they are not compatible with 
+      foomatic-db-compressed-ppds (LP: #647460)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 30 Sep 2010 14:03:10 +0200
 
