--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.142.16) UNRELEASED; urgency=low
+update-manager (1:0.142.16) maverick; urgency=low
 
   * DistUpgrade/ReleaseAnnouncement:
     - add link to http://www.ubuntu.com/desktop/features to tell
@@ -8,7 +8,7 @@ update-manager (1:0.142.16) UNRELEASED; urgency=low
       and ebox-printers as they are not compatible with 
       foomatic-db-compressed-ppds (LP: #647460)
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 30 Sep 2010 14:03:10 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 30 Sep 2010 20:22:36 +0200
 
 update-manager (1:0.142.15) maverick; urgency=low
 
