--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.142.17) UNRELEASED; urgency=low
+
+  * Add kubuntu-devel-release-upgrade script to run the upgrade command for
+    Kubuntu
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Fri, 01 Oct 2010 12:46:09 +0100
+
 update-manager (1:0.142.16) maverick; urgency=low
 
   * DistUpgrade/ReleaseAnnouncement:
