* Add kubuntu-devel-release-upgrade script to run the upgrade   command for Kubuntu * if foomatic-db-gutenprint needs to be removed during the upgrade   because its not compatible with foomatic-db-compressed-ppds,   try replacing it with ijsgutenprint-ppds which is the same content,   just compressed in the same way like foomatic-db-compressed-ppds   (LP: #647460)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,17 @@
 update-manager (1:0.142.17) UNRELEASED; urgency=low
 
-  * Add kubuntu-devel-release-upgrade script to run the upgrade command for
-    Kubuntu
+  [ Jonathan Riddell]
+  * Add kubuntu-devel-release-upgrade script to run the upgrade 
+    command for Kubuntu
+  
+  [ Michael Vogt ]
+  * if foomatic-db-gutenprint needs to be removed during the upgrade
+    because its not compatible with foomatic-db-compressed-ppds,
+    try replacing it with ijsgutenprint-ppds which is the same content,
+    just compressed in the same way like foomatic-db-compressed-ppds
+    (LP: #647460)
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Fri, 01 Oct 2010 12:46:09 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 01 Oct 2010 16:32:57 +0200
 
 update-manager (1:0.142.16) maverick; urgency=low
 
