--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.142.17) UNRELEASED; urgency=low
+update-manager (1:0.142.17) maverick; urgency=low
 
   [ Jonathan Riddell]
   * Add kubuntu-devel-release-upgrade script to run the upgrade 
@@ -11,7 +11,7 @@ update-manager (1:0.142.17) UNRELEASED; urgency=low
     just compressed in the same way like foomatic-db-compressed-ppds
     (LP: #647460)
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 01 Oct 2010 16:32:57 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 01 Oct 2010 21:28:24 +0200
 
 update-manager (1:0.142.16) maverick; urgency=low
 
