* DistUpgrade/DistUpgrade.cfg:   - make sure that kbluetooth gets removed on upgrade (LP: #653838)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.142.18) UNRELEASED; urgency=low
+
+  * DistUpgrade/DistUpgrade.cfg:
+    - make sure that kbluetooth gets removed on upgrade (LP: #653838)
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 04 Oct 2010 13:19:18 +0200
+
 update-manager (1:0.142.17) maverick; urgency=low
 
   [ Jonathan Riddell]
