Add kubuntu-devel-release-upgrade to setup.py

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,11 @@
-update-manager (1:0.142.18) UNRELEASED; urgency=low
+update-manager (1:0.142.18) maverick; urgency=low
 
   [ Alessandro Ghersi ]
   * DistUpgrade/DistUpgrade.cfg:
     - make sure that kbluetooth gets removed on upgrade (LP: #653838)
+
+  [ Jonathan Riddell ]
+  * Add kubuntu-devel-release-upgrade to setup.py
  
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 04 Oct 2010 13:19:18 +0200
 
