* DistUpgrade/DistUpgradeQuirks.py:   - only add extras.ubuntu.com for systems that have the matching     keyring (LP: #653200). This ensures its not added on a server     upgrade.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+update-manager (1:0.142.19) maverick; urgency=low
+
+  * DistUpgrade/DistUpgradeQuirks.py:
+    - only add extras.ubuntu.com for systems that have the matching
+      keyring (LP: #653200). This ensures its not added on a server
+      upgrade.
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 04 Oct 2010 16:29:18 +0200
+
 update-manager (1:0.142.18) maverick; urgency=low
 
   [ Alessandro Ghersi ]
