* UpdateManager/UpdateManager.py:   - do not crash if the free space check fails

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
-update-manager (1:0.142.20) maverick; urgency=low
+update-manager (1:0.142.20) UNRELEASEDmaverick; urgency=low
 
+  * UpdateManager/UpdateManager.py:
+    - do not crash if the free space check fails 
   * DistUpgrade/DistUpgrade.cfg:
     - add blcr-dkms to the "BadVersions" variable. The current blcr-dkms
       source will not build with 2.6.35. Adding it here will cause the
