debian/changelog: updated to include the KDE too

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,7 +8,8 @@ update-manager (1:0.142.20) UNRELEASEDmaverick; urgency=low
       upgrade to abort with a message if it is installed. 
       It also means that if support for 2.6.35 is added to blcr-dkms via
       a SRU that will automatically unblock the upgrade (LP: #555729)
-  * DistUpgrade/DistUpgradeViewGtk.py:
+  * DistUpgrade/DistUpgradeViewGtk.py,
+    DistUpgrade/DistUpgradeViewKDE.py,:
     - workaround dpkg not sending the correct filename on conffile
       prompts over the status-fd (LP: #656912)
 
