--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+update-manager (1:0.142.21) UNRELEASEDmaverick-proposed; urgency=low
+
+  * DistUpgrade/DistUpgradeQuirks.py:
+    - abort the upgrade if the user runs on a i586 or a i686
+      with no "cmov" support (LP: #587186)
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 15 Oct 2010 15:41:03 +0200
+
 update-manager (1:0.142.20) maverick-proposed; urgency=low
 
   [ Michael Vogt ]
