--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.142.21) UNRELEASEDmaverick-proposed; urgency=low
+update-manager (1:0.142.21) maverick-proposed; urgency=low
 
   * DistUpgrade/DistUpgradeQuirks.py:
     - abort the upgrade if the user runs on a i586 or a i686
