* DistUpgrade/*:   - updated for natty * tests/test_prerequists.py:   - fix jaunty test now that this is moved to old-releases.ubuntu.com * pre-build.sh:   - run testsuite

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+update-manager (1:0.145) UNRELEASEDnatty; urgency=low
+
+  * DistUpgrade/*:
+    - updated for natty
+  * tests/test_prerequists.py:
+    - fix jaunty test now that this is moved to old-releases.ubuntu.com
+  * pre-build.sh:
+    - run testsuite
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 03 Nov 2010 14:08:14 +0100
+
 update-manager (1:0.142.21) maverick-proposed; urgency=low
 
   * DistUpgrade/DistUpgradeQuirks.py:
