* UpdateManager/Core/DistUpgradeFetcherCore.py:   - some python-apt 0.8 fixes * tests/test_dist_upgrade_fetcher_core.py:   - fix test failures and ensure its python-apt 0.8 clean * po/update-manager.pot:   - updated

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,12 @@ update-manager (1:0.145) UNRELEASEDnatty; urgency=low
     - fix jaunty test now that this is moved to old-releases.ubuntu.com
   * pre-build.sh:
     - run testsuite
+  * UpdateManager/Core/DistUpgradeFetcherCore.py:
+    - some python-apt 0.8 fixes
+  * tests/test_dist_upgrade_fetcher_core.py:
+    - fix test failures and ensure its python-apt 0.8 clean
+  * po/update-manager.pot:
+    - updated
   
   [ Bilal Akhtar ]
   * UpdateManager/UpdateManager.py:
