--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.145) UNRELEASEDnatty; urgency=low
+update-manager (1:0.145) natty; urgency=low
 
   [ Michael Vogt ]
   * DistUpgrade/*:
@@ -6,7 +6,7 @@ update-manager (1:0.145) UNRELEASEDnatty; urgency=low
   * tests/test_prerequists.py:
     - fix jaunty test now that this is moved to old-releases.ubuntu.com
   * pre-build.sh:
-    - run testsuite
+    - run testsuite on bzr-buildpackage 
   * tests/test_dist_upgrade_fetcher_core.py:
     - fix test failures and ensure its python-apt 0.8 clean
   * po/update-manager.pot:
@@ -19,12 +19,14 @@ update-manager (1:0.145) UNRELEASEDnatty; urgency=low
     tests/test_update_origin.py,
     tests/test_sources_list.py:
     - fixes in the python-apt 0.8 API
+  * tests/*.py:
+    - fix natty test failures
 
   [ Bilal Akhtar ]
   * UpdateManager/UpdateManager.py:
     - add more meaningful text if info is out-of-date (LP: #35009)
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 03 Nov 2010 14:08:14 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 04 Nov 2010 15:57:02 +0100
 
 update-manager (1:0.142.21) maverick-proposed; urgency=low
 
