* DistUpgrade/EOLReleaseAnnouncement:   - add information for the time when the release is EOL     (part of the fix for #671016)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+update-manager (1:0.145.1) UNRELEASED; urgency=low
+
+  * DistUpgrade/EOLReleaseAnnouncement:
+    - add information for the time when the release is EOL
+      (part of the fix for #671016)
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 04 Nov 2010 20:55:48 +0100
+
 update-manager (1:0.145) natty; urgency=low
 
   [ Michael Vogt ]
