* UpdateManager/UpdateManager.py:   - fix typo in EOL text

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ update-manager (1:0.145.1) UNRELEASED; urgency=low
   * DistUpgrade/EOLReleaseAnnouncement:
     - add information for the time when the release is EOL
       (part of the fix for #671016)
+  * UpdateManager/UpdateManager.py:
+    - fix typo in EOL text
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 04 Nov 2010 20:55:48 +0100
 
