* DistUpgrade/DistUpgradeController.py:   - properly log excepition in the child to the main.log, thanks     to Jonathan Davies

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ update-manager (1:0.145.1) UNRELEASED; urgency=low
       (part of the fix for #671016)
   * UpdateManager/UpdateManager.py:
     - fix typo in EOL text
+  * DistUpgrade/DistUpgradeController.py:
+    - properly log excepition in the child to the main.log, thanks
+      to Jonathan Davies
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 04 Nov 2010 20:55:48 +0100
 
