In Python 2.7, locale.format() input test has gotten more strict.  It does not allow trailing text after the format string.  Change this to locale.format_string().  See Python issue 10379.  (LP: #673297)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+update-manager (1:0.145.2) UNRELEASED; urgency=low
+
+  * In Python 2.7, locale.format() input test has gotten more strict.  It
+    does not allow trailing text after the format string.  Change this to
+    locale.format_string().  See Python issue 10379.  (LP: #673297)
+
+ -- Barry Warsaw <barry@ubuntu.com>  Tue, 09 Nov 2010 22:01:28 -0500
+
 update-manager (1:0.145.1) UNRELEASED; urgency=low
 
   * DistUpgrade/EOLReleaseAnnouncement:
