--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.145.1) UNRELEASED; urgency=low
+update-manager (1:0.145.1) natty; urgency=low
 
   [ Michael Vogt ]
   * DistUpgrade/EOLReleaseAnnouncement:
@@ -15,7 +15,7 @@ update-manager (1:0.145.1) UNRELEASED; urgency=low
     does not allow trailing text after the format string.  Change this to
     locale.format_string().  See Python issue 10379.  (LP: #673297)
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 04 Nov 2010 20:55:48 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 10 Nov 2010 17:39:41 +0100
 
 update-manager (1:0.145) natty; urgency=low
 
