Add required details to .emit() call.  (LP: #631328)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+update-manager (1:0.145.1ppa0) natty; urgency=low
+
+  * Add required details to .emit() call.  (LP: #631328)
+
+ -- Barry Warsaw <barry@ubuntu.com>  Thu, 11 Nov 2010 16:12:25 -0500
+
 update-manager (1:0.145.1) natty; urgency=low
 
   [ Michael Vogt ]
