--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,10 @@ update-manager (1:0.145.2) UNRELEASED; urgency=low
 
   [ Barry Warsaw ]
   * Add required details to .emit() call.  (LP: #631328)
+  
+  [ Michael Vogt ]
+  * debian/control:
+    - add or-dependency for aptdaemon
 
  -- Barry Warsaw <barry@ubuntu.com>  Thu, 11 Nov 2010 16:12:25 -0500
 
