Add required details to .emit() call when running with synaptic as the backend (LP: #631328)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+update-manager (1:0.142.22) maverick-proposed; urgency=low
+
+  [ Barry Warsaw ]
+  * Add required details to .emit() call when running with
+    synaptic as the backend (LP: #631328)
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 12 Nov 2010 09:30:28 +0100
+
 update-manager (1:0.142.21) maverick-proposed; urgency=low
 
   * DistUpgrade/DistUpgradeQuirks.py:
