DistUpgrade/DistUpgradeQuirks.py: run self._test_and_fail_on_non_i686() in from_lucid handler and call strip() on the dpkg output

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,11 @@ update-manager (1:0.142.22) maverick-proposed; urgency=low
   [ Barry Warsaw ]
   * Add required details to .emit() call when running with
     synaptic as the backend (LP: #631328)
+  
+  [ Michael Vogt ]
+  * DistUpgrade/DistUpgradeQuirks.py:
+    - fixes in the cmov quirks handler (LP: #587186)
+      (thanks to Jean-Baptiste Lallement)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 12 Nov 2010 09:30:28 +0100
 
