--- a/debian/changelog
+++ b/debian/changelog
@@ -5,14 +5,15 @@ update-manager (1:0.145.2) UNRELEASED; urgency=low
   
   [ Michael Vogt ]
   * debian/control:
-    - add or-dependency for aptdaemon
+    - add or-dependency for python-aptdaemon-gtk and drop gksu 
+      dependency (its either brought in via synaptic or not needed)
   * UpdateManager/Core/utils.py:
     - add get_arch() call
   * DistUpgrade/DistUpgradeController.py, DistUpgrade/DistUpgradeQuirks.py:
     - use new utils.get_arch() call
   * merged fixes from lp:~ubuntu-core-dev/update-manager/maverick
 
- -- Barry Warsaw <barry@ubuntu.com>  Thu, 11 Nov 2010 16:12:25 -0500
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 12 Nov 2010 10:06:39 +0100
 
 update-manager (1:0.145.1) natty; urgency=low
 
