* debian/rules:   - push EOLReleaseAnnouncement to the server too

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,8 +12,10 @@ update-manager (1:0.145.2) UNRELEASED; urgency=low
   * DistUpgrade/DistUpgradeController.py, DistUpgrade/DistUpgradeQuirks.py:
     - use new utils.get_arch() call
   * merged fixes from lp:~ubuntu-core-dev/update-manager/maverick
+  * debian/rules:
+    - push EOLReleaseAnnouncement to the server too
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 12 Nov 2010 10:06:39 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 12 Nov 2010 15:37:49 +0100
 
 update-manager (1:0.145.1) natty; urgency=low
 
