--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.145.2) UNRELEASED; urgency=low
+update-manager (1:0.145.2) natty; urgency=low
 
   [ Barry Warsaw ]
   * Add required details to .emit() call.  (LP: #631328)
@@ -15,7 +15,7 @@ update-manager (1:0.145.2) UNRELEASED; urgency=low
   * debian/rules:
     - push EOLReleaseAnnouncement to the server too
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 12 Nov 2010 15:37:49 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 12 Nov 2010 15:56:32 +0100
 
 update-manager (1:0.145.1) natty; urgency=low
 
