--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+update-manager (1:0.145.3) UNRELEASED; urgency=low
+
+  * do-release-upgrade:
+    - output if the current release is no longer supported
+      (part of other-ps-n-testing-upgrades-for-preinstall-hw)
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 12 Nov 2010 16:27:31 +0100
+
 update-manager (1:0.145.2) natty; urgency=low
 
   [ Barry Warsaw ]
