--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,11 @@ update-manager (1:0.145.3) UNRELEASED; urgency=low
   * do-release-upgrade:
     - output if the current release is no longer supported
       (part of other-ps-n-testing-upgrades-for-preinstall-hw)
+  * check-new-release-gtk:
+    - show "dist-no-longer-supported" dialog if the current 
+      release is no longer supported
+    - automatically "unignore" a previously ignored upgrade if
+      the current release becomes EOL
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 12 Nov 2010 16:27:31 +0100
 
