* AutoUpgradeTester/profile/*/DistUpgrade.cfg:   - update to auto test maverick to natty

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ update-manager (1:0.145.3) UNRELEASED; urgency=low
       release is no longer supported
     - automatically "unignore" a previously ignored upgrade if
       the current release becomes EOL
+  * AutoUpgradeTester/profile/*/DistUpgrade.cfg:
+    - update to auto test maverick to natty
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 12 Nov 2010 16:27:31 +0100
 
