* DistUpgrade/DistUpgrade.cfg:   - update kernel removal for natty too

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,8 @@ update-manager (1:0.145.3) UNRELEASED; urgency=low
       the current release becomes EOL
   * AutoUpgradeTester/profile/*/DistUpgrade.cfg:
     - update to auto test maverick to natty
+  * DistUpgrade/DistUpgrade.cfg:
+    - update kernel removal for natty too
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 12 Nov 2010 16:27:31 +0100
 
