--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.145.3) UNRELEASED; urgency=low
+update-manager (1:0.145.3) natty; urgency=low
 
   * do-release-upgrade:
     - output if the current release is no longer supported
@@ -13,7 +13,7 @@ update-manager (1:0.145.3) UNRELEASED; urgency=low
   * DistUpgrade/DistUpgrade.cfg:
     - update kernel removal for natty too
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 12 Nov 2010 16:27:31 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 17 Nov 2010 17:40:09 +0100
 
 update-manager (1:0.145.2) natty; urgency=low
 
