--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,11 @@
 update-manager (1:0.145.4) UNRELEASED; urgency=low
 
+  * DistUpgrade/*.ui:
+    - updated window main heading for 11.04
   * merged lp:~brian-murray/update-manager/upgrade-canceled-wording
     with wording and style fixes, many thanks!
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 18 Nov 2010 17:52:36 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 22 Nov 2010 16:02:43 +0100
 
 update-manager (1:0.145.3) natty; urgency=low
 
