* DistUpgrade/DistUpgradeCache.py, UpdateManager/Core/utils.py:   - check if running inside a chroot and if so, skip kernel     selection

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,9 @@ update-manager (1:0.145.4) UNRELEASED; urgency=low
     - updated window main heading for 11.04
   * merged lp:~brian-murray/update-manager/upgrade-canceled-wording
     with wording and style fixes, many thanks!
+  * DistUpgrade/DistUpgradeCache.py, UpdateManager/Core/utils.py:
+    - check if running inside a chroot and if so, skip kernel
+      selection
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 22 Nov 2010 16:02:43 +0100
 
