* UpdateManager/Core/MetaRelease.py:   - improve error checking and only present upgrade button if there     is a working network   - cleanup hardy code

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,10 @@ update-manager (1:0.145.4) UNRELEASED; urgency=low
   * DistUpgrade/DistUpgradeCache.py, UpdateManager/Core/utils.py:
     - check if running inside a chroot and if so, skip kernel
       selection
+  * UpdateManager/Core/MetaRelease.py:
+    - improve error checking and only present upgrade button if there
+      is a working network
+    - cleanup hardy code
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 22 Nov 2010 16:02:43 +0100
 
