--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.145.4) UNRELEASED; urgency=low
+update-manager (1:0.145.4) natty; urgency=low
 
   * DistUpgrade/*.ui:
     - updated window main heading for 11.04
@@ -12,7 +12,7 @@ update-manager (1:0.145.4) UNRELEASED; urgency=low
       is a working network
     - cleanup hardy code
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 22 Nov 2010 16:02:43 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 26 Nov 2010 16:59:29 +0100
 
 update-manager (1:0.145.3) natty; urgency=low
 
