* DistUpgrade/DistUpgradeViewText.py:   - start with gnu screen integration

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.145.5) UNRELEASED; urgency=low
+
+  * DistUpgrade/DistUpgradeViewText.py:
+    - start with gnu screen integration
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 26 Nov 2010 18:06:56 +0100
+
 update-manager (1:0.145.4) natty; urgency=low
 
   * DistUpgrade/*.ui:
