* DistUpgrade/*ReleaseAnnouncement:   - Fix "Narwahl" typo (LP: #684050).

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 update-manager (1:0.145.5) UNRELEASED; urgency=low
 
+  [ Michael Vogt ]
   * DistUpgrade/DistUpgradeViewText.py:
     - start with gnu screen integration
   * DistUpgrade/DistUpgradeController.py:
@@ -14,6 +15,10 @@ update-manager (1:0.145.5) UNRELEASED; urgency=low
     will use screen in the text version of the release upgrader
   * Janitor/plugins/dpkg_status_plugin.py, DistUpgrade/DistUpgradeViewGtk.py:
     - fix python-apt 0.8 API
+
+  [ Colin Watson ]
+  * DistUpgrade/*ReleaseAnnouncement:
+    - Fix "Narwahl" typo (LP: #684050).
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 26 Nov 2010 18:06:56 +0100
 
