--- a/README
+++ b/README
@@ -10,3 +10,9 @@ are honored:
 DEBUG_UPDATE_MANAGER:
 - If set, debug information is printed to sys.stderr.  This is useful for
   testing e.g. release upgrade checking/fetching.
+
+
+If the release upgrade is running in text mode and gnu screen is
+available it will automatically use gnu screen. This means that if
+e.g. the network connection is dropping just running the upgrader
+again will just reconnect to the running upgrade.
