* debian/rules, debian/control:   - use dh_python2 instead of python-central and drop it from the     build-depends

--- a/debian/changelog
+++ b/debian/changelog
@@ -17,12 +17,15 @@ update-manager (1:0.145.5) UNRELEASED; urgency=low
     - fix python-apt 0.8 API
   * merged lp:~kelemeng/update-manager/bug633036 (LP: #633036), many
     thanks to Gabor Kelemen
+  * debian/rules, debian/control:
+    - use dh_python2 instead of python-central and drop it from the
+      build-depends
 
   [ Colin Watson ]
   * DistUpgrade/*ReleaseAnnouncement:
     - Fix "Narwahl" typo (LP: #684050).
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 26 Nov 2010 18:06:56 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 03 Dec 2010 09:46:34 +0100
 
 update-manager (1:0.145.4) natty; urgency=low
 
