--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.145.5) UNRELEASED; urgency=low
+update-manager (1:0.145.5) natty; urgency=low
 
   [ Michael Vogt ]
   * DistUpgrade/DistUpgradeViewText.py:
