--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+update-manager (1:0.145.6) natty; urgency=low
+
+  * debian/rules:
+    - build with --skip-private, otherwise dh_python2 will generate
+      a incorrect maintainer script for the auto-upgrade-tester package
+      that contains a invalid version range string
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 03 Dec 2010 10:22:03 +0100
+
 update-manager (1:0.145.5) natty; urgency=low
 
   [ Michael Vogt ]
