--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
-update-manager (1:0.145.7) UNRELEASED; urgency=low
+update-manager (1:0.145.7) natty; urgency=low
 
+  * UpdateManager/backend/InstallBackendAptdaemon.py:
+    - updated for aptdaemon 0.40
   * merged lp:~alexlauni/update-manager/dbus, many thanks
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 06 Dec 2010 15:50:04 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 07 Dec 2010 15:13:20 +0100
 
 update-manager (1:0.145.6) natty; urgency=low
 
