remove update-manager-hildon

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+update-manager (1:0.145.8) natty; urgency=low
+
+  * remove update-manager-hildon
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 08 Dec 2010 16:13:20 +0100
+
 update-manager (1:0.145.7) natty; urgency=low
 
   * UpdateManager/backend/InstallBackendAptdaemon.py:
