--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+update-manager (1:0.145.9) natty; urgency=low
+
+  * fix FTBFS
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 09 Dec 2010 15:13:38 +0100
+
 update-manager (1:0.145.8) natty; urgency=low
 
   * remove update-manager-hildon
