* DistUpgrade/DistUpgradeQuirks.py:   - fixup internal (ed) based patching tool * DistUpgrade/patches/   - add pycompile patch to ensure clean upgrade even when maverick-updates     is not available * AutoUpgradeTester/profile/server/DistUpgrade.cfg:   - updated for maverick * DistUpgrade/DistUpgradeCache.py:   - minor python-apt 0.8 API update

--- a/DistUpgrade/patches/README
+++ b/DistUpgrade/patches/README
@@ -1,4 +1,4 @@
-This dir can be used to drop *sed* script as patches (we can not use
+This dir can be used to drop *ed* script as patches (we can not use
 patch as its not part of the default install) to fixup stuff that is
 problematic during the upgrade (like doc-base and
 /usr/sbin/install-docs).
