--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+update-manager (1:0.145.10) UNRELEASED; urgency=low
+
+  * DistUpgrade/DistUpgradeQuirks.py:
+    - fixup internal (ed) based patching tool
+  * DistUpgrade/patches/
+    - add pycompile patch to ensure clean upgrade even when maverick-updates
+      is not available
+  * AutoUpgradeTester/profile/server/DistUpgrade.cfg:
+    - updated for maverick
+  * DistUpgrade/DistUpgradeCache.py:
+    - minor python-apt 0.8 API update
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 17 Dec 2010 16:27:43 +0100
+
 update-manager (1:0.145.9) natty; urgency=low
 
   * fix FTBFS
