--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-update-manager (1:0.145.10) UNRELEASED; urgency=low
+update-manager (1:0.145.10) natty; urgency=low
 
   * DistUpgrade/DistUpgradeQuirks.py:
     - fixup internal (ed) based patching tool
   * DistUpgrade/patches/
     - add pycompile patch to ensure clean upgrade even when maverick-updates
-      is not available
+      is not available (LP: #689615)
   * AutoUpgradeTester/profile/server/DistUpgrade.cfg:
     - updated for maverick
   * DistUpgrade/DistUpgradeCache.py:
@@ -12,7 +12,7 @@ update-manager (1:0.145.10) UNRELEASED; urgency=low
   * tests/patchdir/_patchdir_foo.f41121a903eafadf258962abc57c8644:
     - update test for latest internal patching tool
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 17 Dec 2010 16:27:43 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 17 Dec 2010 18:24:36 +0100
 
 update-manager (1:0.145.9) natty; urgency=low
 
