--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+update-manager (1:0.145.11) natty; urgency=low
+
+  * debian/91-release-upgrade:
+    - test if the script exists before running it (thanks to
+      Kees Cook)
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 10 Jan 2011 19:01:48 +0100
+
 update-manager (1:0.145.10) natty; urgency=low
 
   * DistUpgrade/DistUpgradeQuirks.py:
