* pre-build.sh:   - auto generate html files from the *ReleaseAnnoucement     files

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ update-manager (1:0.145.11) natty; urgency=low
   * debian/91-release-upgrade:
     - test if the script exists before running it (thanks to
       Kees Cook)
+  * pre-build.sh:
+    - auto generate html files from the *ReleaseAnnoucement
+      files
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 10 Jan 2011 19:01:48 +0100
 
