--- a/debian/changelog
+++ b/debian/changelog
@@ -6,8 +6,11 @@ update-manager (1:0.145.11) natty; urgency=low
   * pre-build.sh:
     - auto generate html files from the *ReleaseAnnoucement
       files
+  * merged 
+    lp:~brendan-donegan/update-manager/updated-signal-and-no-update-option
+    (many thanks)
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 10 Jan 2011 19:01:48 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 28 Jan 2011 22:27:56 +0100
 
 update-manager (1:0.145.10) natty; urgency=low
 
