* debian/control:   - drop build-depend on fglrx-modalias * DistUpgrade/DistUpgradeQuirks.py:   - port fglrx-modalias checking code to new modaliases support from     the pkgrecords * tests/test_quirks.py:   - update tests

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+update-manager (1:0.145.12) natty; urgency=low
+
+  * debian/control:
+    - drop build-depend on fglrx-modalias
+  * DistUpgrade/DistUpgradeQuirks.py:
+    - port fglrx-modalias checking code to new modaliases support from
+      the pkgrecords
+  * tests/test_quirks.py:
+    - update tests
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 31 Jan 2011 14:49:19 +0100
+
 update-manager (1:0.145.11) natty; urgency=low
 
   * debian/91-release-upgrade:
