fix ReleaseAnnoucement.html auto generation

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+update-manager (1:0.145.13) UNRELEASEDnatty; urgency=low
+
+  * fix ReleaseAnnoucement.html auto generation
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 31 Jan 2011 19:51:18 +0100
+
 update-manager (1:0.145.12) natty; urgency=low
 
   * debian/control:
