--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-update-manager (1:0.145.13) UNRELEASEDnatty; urgency=low
+update-manager (1:0.145.13) natty; urgency=low
 
   * fix ReleaseAnnoucement.html auto generation
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 31 Jan 2011 19:51:18 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 31 Jan 2011 20:48:42 +0100
 
 update-manager (1:0.145.12) natty; urgency=low
 
