* DistUpgrade/DistUpgradeView*.py:   - pass apt.Package object to the view instead of strings, this     allows to show additional info on the packages (like summary     or size)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+update-manager (1:0.146) UNRELEASED; urgency=low
+
+  * DistUpgrade/DistUpgradeView*.py:
+    - pass apt.Package object to the view instead of strings, this
+      allows to show additional info on the packages (like summary
+      or size)
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 03 Feb 2011 11:34:47 +0100
+
 update-manager (1:0.145.13) natty; urgency=low
 
   * fix ReleaseAnnoucement.html auto generation
