--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ update-manager (1:0.146) UNRELEASED; urgency=low
     - pass apt.Package object to the view instead of strings, this
       allows to show additional info on the packages (like summary
       or size)
+  * DistUpgrade/DistUpgradeViewGtk.py:
+    - check for libgtk2-perl for debconf support
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 03 Feb 2011 11:34:47 +0100
 
