* UpdateManager/ReleaseNotesViewer.py:   - use monospace font (LP: #153228)

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ update-manager (1:0.146) UNRELEASED; urgency=low
     - check for libgtk2-perl for debconf support
   * AutoUpgradeTester/install_blacklist.cfg:
     - update blacklist for creating main-all images
+  * UpdateManager/ReleaseNotesViewer.py:
+    - use monospace font (LP: #153228)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 03 Feb 2011 11:34:47 +0100
 
