* DistUpgrade/DistUpgradeController.py:   - perform btrfs snapshot on upgrade if apt-btrfs-snapshot is     available

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,9 @@ update-manager (1:0.146) UNRELEASED; urgency=low
     - update blacklist for creating main-all images
   * UpdateManager/ReleaseNotesViewer.py:
     - use monospace font (LP: #153228)
+  * DistUpgrade/DistUpgradeController.py:
+    - perform btrfs snapshot on upgrade if apt-btrfs-snapshot is 
+      available
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 03 Feb 2011 11:34:47 +0100
 
