--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.146) UNRELEASED; urgency=low
+update-manager (1:0.146) natty; urgency=low
 
   * DistUpgrade/DistUpgradeView*.py:
     - pass apt.Package object to the view instead of strings, this
@@ -14,7 +14,7 @@ update-manager (1:0.146) UNRELEASED; urgency=low
     - perform btrfs snapshot on upgrade if apt-btrfs-snapshot is 
       available
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 03 Feb 2011 11:34:47 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 16 Feb 2011 21:19:12 +0100
 
 update-manager (1:0.145.13) natty; urgency=low
 
