--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,16 @@
 update-manager (1:0.146.1) UNRELEASED; urgency=low
 
+  [ Michael Vogt ]
   * merged lp:~evfool/update-manager/fix689034:
     - Some basic string fixes (lp:#689034), thanks to Robert Roth
   * UpdateManager/Core/roam.py:
     - add backend for roaming detection, thanks to Alex Chiang
   * merged lp:~thibault-lemaitre/ubuntu/natty/update-manager/from_pkg.isInstalled_to_pkg.is_installed
     that fixes a bunch of deprecated python-apt issues (many thanks!)
+
+  [ Lionel Le Folgoc ]
+  * UpdateManager/UpdateManager.py: try to reboot using consolekit if
+    gnome-session isn't present (fixes rebooting on Xfce and LXDE, lp: #530161).
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 18 Feb 2011 17:09:56 +0100
 
