display warning when on 3g and when roaming

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ update-manager (1:0.146.1) UNRELEASED; urgency=low
     - Some basic string fixes (lp:#689034), thanks to Robert Roth
   * UpdateManager/Core/roam.py:
     - add backend for roaming detection, thanks to Alex Chiang
+    - display warning when on 3g and when roaming
   * merged lp:~thibault-lemaitre/ubuntu/natty/update-manager/from_pkg.isInstalled_to_pkg.is_installed
     that fixes a bunch of deprecated python-apt issues (many thanks!)
 
