--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+update-manager (1:0.146.2) UNRELEASED; urgency=low
+
+  *  data/glade/UpdateManager.ui, UpdateManager/UpdateManager.py:
+    - improve wording of roaming warning, thanks to Alex Chiang
+    - make the roaming warning label wrap
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 01 Mar 2011 11:46:26 +0100
+
 update-manager (1:0.146.1) natty; urgency=low
 
   [ Michael Vogt ]
