* use dh_installman to install manpages * move do-release-upgrade manpage to update-manager-core (LP: #695186) * debian/control: Update Breaks:/Conflicts: for the moved manpage.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,16 @@
 update-manager (1:0.146.2) UNRELEASED; urgency=low
 
+  [ Michael Vogt ]
   *  data/glade/UpdateManager.ui, UpdateManager/UpdateManager.py:
     - improve wording of roaming warning, thanks to Alex Chiang
     - make the roaming warning label wrap
+
+  [ Julian Taylor ]
+  * use dh_installman to install manpages
+  * move do-release-upgrade manpage to update-manager-core (LP: #695186)
+
+  [ Martin Pitt ]
+  * debian/control: Update Breaks:/Conflicts: for the moved manpage.
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 01 Mar 2011 11:46:26 +0100
 
