--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ update-manager (1:0.146.2) UNRELEASED; urgency=low
   *  data/glade/UpdateManager.ui, UpdateManager/UpdateManager.py:
     - improve wording of roaming warning, thanks to Alex Chiang
     - make the roaming warning label wrap
+  * UpdateManager/UpdateManager.py:
+    - fix crash in  _get_last_apt_get_update_text (LP: #712346)
 
   [ Julian Taylor ]
   * use dh_installman to install manpages
