--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.146.2) UNRELEASED; urgency=low
+update-manager (1:0.146.2) natty; urgency=low
 
   [ Michael Vogt ]
   *  data/glade/UpdateManager.ui, UpdateManager/UpdateManager.py:
@@ -16,7 +16,7 @@ update-manager (1:0.146.2) UNRELEASED; urgency=low
   [ Martin Pitt ]
   * debian/control: Update Breaks:/Conflicts: for the moved manpage.
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 01 Mar 2011 11:46:26 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 09 Mar 2011 10:25:11 +0100
 
 update-manager (1:0.146.1) natty; urgency=low
 
