* DistUpgrade/DistUpgradeAptCdrom.py, DistUpgrade/DistUpgradeController.py:   - comment out cdrom source after alternative CD based upgrade * DistUpgrade/DistUpgradeController.py:   - show error message when cdrom fails to add * tests/test_cdrom.py:   - add test for cdrom commenting

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+update-manager (1:0.146.3) UNRELEASED; urgency=low
+
+  * DistUpgrade/DistUpgradeAptCdrom.py, DistUpgrade/DistUpgradeController.py:
+    - comment out cdrom source after alternative CD based upgrade
+  * DistUpgrade/DistUpgradeController.py:
+    - show error message when cdrom fails to add
+  * tests/test_cdrom.py:
+    - add test for cdrom commenting
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 09 Mar 2011 14:39:44 +0100
+
 update-manager (1:0.146.2) natty; urgency=low
 
   [ Michael Vogt ]
