--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.146.3) UNRELEASED; urgency=low
+update-manager (1:0.146.3) natty; urgency=low
 
   * DistUpgrade/DistUpgradeAptCdrom.py, DistUpgrade/DistUpgradeController.py:
     - comment out cdrom source after alternative CD based upgrade
@@ -7,7 +7,7 @@ update-manager (1:0.146.3) UNRELEASED; urgency=low
   * tests/test_cdrom.py:
     - add test for cdrom commenting
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 09 Mar 2011 14:39:44 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 09 Mar 2011 16:19:21 +0100
 
 update-manager (1:0.146.2) natty; urgency=low
 
