* DistUpgrade/DistUpgradeMain.py, DistUpgrade/apt_clone.py:   - use apt-clone to create system-state instead of custom     one, this makes reproducing problems a lot easier as     apt-clone restore <statefile> can be used. It also means     that ubiquity can pick up failed upgrades from the state     file and finish them.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+update-manager (1:0.146.4) UNRELEASEDnatty; urgency=low
+
+  * DistUpgrade/DistUpgradeMain.py, DistUpgrade/apt_clone.py:
+    - use apt-clone to create system-state instead of custom
+      one, this makes reproducing problems a lot easier as 
+      apt-clone restore <statefile> can be used. It also means
+      that ubiquity can pick up failed upgrades from the state
+      file and finish them.
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 15 Mar 2011 15:26:20 +0100
+
 update-manager (1:0.146.3) natty; urgency=low
 
   * DistUpgrade/DistUpgradeAptCdrom.py, DistUpgrade/DistUpgradeController.py:
