--- a/debian/changelog
+++ b/debian/changelog
@@ -1,13 +1,13 @@
-update-manager (1:0.146.4) UNRELEASEDnatty; urgency=low
+update-manager (1:0.146.4) natty; urgency=low
 
-  * DistUpgrade/DistUpgradeMain.py, DistUpgrade/apt_clone.py:
-    - use apt-clone to create system-state instead of custom
-      one, this makes reproducing problems a lot easier as 
-      apt-clone restore <statefile> can be used. It also means
-      that ubiquity can pick up failed upgrades from the state
-      file and finish them.
+  * DistUpgrade/DistUpgradeMain.py, DistUpgrade/apt_clone.py: 
+    Use apt-clone to create system-state instead of custom one
+    (apt-clone_system_state.tar.gz)
+    This makes reproducing problems a lot easier as apt-clone restore
+    <statefile> can be used. It also means that ubiquity can pick up
+    failed upgrades from the state file and finish them.
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 15 Mar 2011 15:26:20 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 15 Mar 2011 16:05:11 +0100
 
 update-manager (1:0.146.3) natty; urgency=low
 
