--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.146.5) UNRELEASEDnatty; urgency=low
+
+  * fix FTBFS by including a apt_clone.py copy until apt-clone
+    makes it through NEW
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 15 Mar 2011 20:40:58 +0100
+
 update-manager (1:0.146.4) natty; urgency=low
 
   * DistUpgrade/DistUpgradeMain.py, DistUpgrade/apt_clone.py: 
