UpdateManager/ReleaseNotesViewer.py: fix the path for gnome-open and default to xdg-open

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.146.6) natty; urgency=low
+
+  * UpdateManager/ReleaseNotesViewer.py: fix the path for gnome-open
+    and default to xdg-open (LP: #693131) 
+
+ -- Brian Murray <brian@ubuntu.com>  Wed, 16 Mar 2011 16:46:44 -0700
+
 update-manager (1:0.146.5) natty; urgency=low
 
   * fix FTBFS by including a apt_clone.py copy until apt-clone
