* DistUpgrade/apt_clone.py:   - use apt_clone.py from the apt-clone package * debian/control:   - add apt-clone to the build-depends

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,10 @@ update-manager (1:0.146.6) UNRELEASEDnatty; urgency=low
 
   * UpdateManager/ReleaseNotesViewer.py: fix the path for gnome-open
     and default to xdg-open (LP: #693131) 
+  * DistUpgrade/apt_clone.py:
+    - use apt_clone.py from the apt-clone package
+  * debian/control:
+    - add apt-clone to the build-depends
 
  -- Brian Murray <brian@ubuntu.com>  Wed, 16 Mar 2011 16:46:44 -0700
 
