--- a/debian/changelog
+++ b/debian/changelog
@@ -1,13 +1,18 @@
 update-manager (1:0.146.6) UNRELEASEDnatty; urgency=low
 
+  [ Brian Murray]
   * UpdateManager/ReleaseNotesViewer.py: fix the path for gnome-open
     and default to xdg-open (LP: #693131) 
+  
+  [ Michael Vogt ]
   * DistUpgrade/apt_clone.py:
     - use apt_clone.py from the apt-clone package
   * debian/control:
     - add apt-clone to the build-depends
+  * DistUpgrade/DevelReleaseAnnouncement:
+    - updated to say "BETA"
 
- -- Brian Murray <brian@ubuntu.com>  Wed, 16 Mar 2011 16:46:44 -0700
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 29 Mar 2011 16:27:27 +0200
 
 update-manager (1:0.146.5) natty; urgency=low
 
