temprary branch for uploading

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+update-manager (1:0.146.6) natty; urgency=low
+
+  * DistUpgrade/DevelReleaseAnnouncement:
+    - fix description to say "BETA"
+  * pre-build.sh:
+    - cleanup cruft test leftover output
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 29 Mar 2011 16:45:29 +0200
+
 update-manager (1:0.146.5) natty; urgency=low
 
   * fix FTBFS by including a apt_clone.py copy until apt-clone
